--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
 										<img src="images/pic01.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Aliquam</a></h3>
-										<p>Ipsum dolor sit amet</p>
+										<h3><a href="https://github.com/jcastillo2583/CPSC-411-Midterm" class="link">CPSC 411 Midterm</a></h3>
+										<p>My answers to the midterm</p>
 									</header>
 								</article>
 								<article>
