--- a/elements.html
+++ b/elements.html
@@ -29,7 +29,7 @@
 					<nav id="menu">
 						<ul class="links">
 							<li><a href="index.html">Home</a></li>
-							<li><a href="https://github.com/jcastillo2583/CPSC-411-AppStoreProject1">411Proj</a></li>
+							<li><a href="landing.html">Landing</a></li>
 							<li><a href="generic.html">Generic</a></li>
 							<li><a href="elements.html">Elements</a></li>
 						</ul>
