--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
 										<img src="images/pic02.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Tempus</a></h3>
-										<p>feugiat amet tempus</p>
+										<h3><a href="landing.html" class="link">https://github.com/jcastillo2583/CPSC-411-AppStoreProject1</a></h3>
+										<p>CPSC 411 App Store Project 1</p>
 									</header>
 								</article>
 								<article>
